# savage-playground

./: .gitignore  Cargo.toml
_old/debug/proto_chat/: Cargo.toml
_old/servers/game_host_server/: Cargo.toml  build.rs
_old/servers/game_host_server/src/: config.rs  lib.rs
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/assets/: game_assets_mapping.json
backend/build_util/schema_gen/src/: lib.rs
backend/communication/: README.md
backend/communication/game_interface/: Cargo.toml
backend/debug/proto_chat/: Cargo.toml  build.rs
backend/debug/proto_chat/proto/: proto_chat.proto
backend/debug/proto_chat/src/: main.rs
backend/debug/proto_echo/: Cargo.toml
backend/framework/: Cargo.toml
backend/framework/src/: plugin.rs
backend/framework/src/io/: mod.rs  time_sliced_io.rs
backend/servers/game_asset_server/: Cargo.toml
backend/servers/game_host_server/: Cargo.toml
backend/servers/game_host_server/src/: lib.rs
backend/servers/game_host_server/tests/: integration_test.rs
backend/servers/test_game_host_server/: foo.txt
backend/servers/test_game_host_server/src/: main.rs  test_game_mapping.json
backend/test-local-set/: Cargo.toml
backend/test-local-set/src/: main.rs
backend/testing/: Cargo.toml
backend/worlds/src/mechanics/: mod.rs
framework/: .gitignore  Cargo.toml
framework/game_framework/: Cargo.toml
framework/game_framework/game_config/: Cargo.toml
framework/game_interface/: Cargo.toml
framework/game_interface/config/: Cargo.toml
framework/game_interface/config/src/: lib.rs
framework/src/: lib.rs  plugin.rs
framework/src/.debug/: local_input.rs  mod.rs
framework/src/blueprints/: player.rs
framework/src/components/: mod.rs
framework/src/components/boss/: aggro_table.rs
framework/src/components/collision/: aoe.rs  collision_groups.rs  hitbox.rs  mod.rs  player.rs  probed_rigid_body.rs
framework/src/components/player/: identity.rs  mod.rs  raid_roles.rs
framework/src/components/rendering/: blending.rs  drawable.rs  gl_types.rs  layers.rs  mod.rs  shader.rs  sprites.rs
framework/src/events/: aggro.rs  mod.rs
framework/src/resources/io/: input.rs
framework/src/resources/world/: environment.rs
framework/src/systems/: aggro.rs  mod.rs  stages.rs
framework/src/systems/player/: mod.rs  player_input_system.rs  player_rigid_body_system.rs  probed_rigid_body_system.rs  rendering.rs
framework/src/systems/serialization/: mod.rs  renderer_snapshot.rs
framework/src/types/: environment.rs  mod.rs  player.rs
framework/src/utils/: bevy.rs  locals.rs  mod.rs  rand.rs
game_server/: Cargo.toml
game_server/src/: config.rs  main.rs  server.rs
games/ffxiv_toolkit_debug/backend/: .gitignore  Cargo.toml
games/ffxiv_toolkit_debug/backend/.cargo/: config.toml
games/ffxiv_toolkit_debug/backend/src/: main.rs
games/proto_chat/: Cargo.toml  build.rs
games/proto_chat/backend/: Cargo.toml  build.rs
games/proto_chat/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
games/proto_chat/src/: main.rs
savage_backend/: Cargo.toml
savage_backend/.cargo/: config.toml
savage_backend/_test/test_asset_server/: Cargo.toml
savage_backend/_test/test_bundled_server/: Cargo.toml
savage_backend/communication/game_interface/: Cargo.toml  build.rs
savage_backend/framework/game_plugins/: Cargo.toml
savage_backend/game_asset_server/: Cargo.toml  build.rs
savage_backend/game_asset_server/schema/: asset_mapping.json
savage_backend/game_asset_server/src/: game_asset_dictionary.rs  lib.rs
savage_backend/game_host_server/: Cargo.toml  build.rs
savage_backend/game_host_server/schema/: game_mapping.json
savage_backend/game_host_server/src/: lib.rs  util.rs
savage_framework/backend/: Cargo.toml
savage_framework/backend/.cargo/: config.toml
savage_framework/backend/ffxiv_plugins/: Cargo.toml
savage_framework/backend/ffxiv_toolkit/: Cargo.toml  build.rs
savage_framework/backend/game_config/: Cargo.toml
savage_framework/backend/game_interface/: build.rs
savage_framework/backend/game_plugins/: Cargo.toml
savage_framework/backend/game_renderer/: Cargo.toml  build.rs
savage_playground_backend/: Cargo.toml  README.md
savage_playground_backend/.cargo/: config.toml
savage_playground_backend/assets/: game_assets_mapping.json
savage_playground_backend/assets/test_package/: test_renderer_msg.json  test_square.json  test_square.ps.glsl
savage_playground_backend/build_util/proto_gen/: Cargo.toml
savage_playground_backend/build_util/schema_gen/: Cargo.toml
savage_playground_backend/build_utils/: Cargo.toml
savage_playground_backend/build_utils/src/: lib.rs
savage_playground_backend/debug/: Cargo.toml
savage_playground_backend/debug/echo/: Cargo.toml
savage_playground_backend/debug/proto_echo/: Cargo.toml
savage_playground_backend/debug/src/: main.rs
savage_playground_backend/debug/test_proto/: Cargo.toml
savage_playground_backend/framework/: Cargo.toml
savage_playground_backend/framework/src/: lib.rs  plugin.rs
savage_playground_backend/game_host_server/: Cargo.toml  build.rs
savage_playground_backend/game_host_server/src/: lib.rs  main.rs
savage_playground_backend/game_host_server/tests/: integration_test.rs
savage_playground_backend/game_interface/: Cargo.toml  README.md  build.rs
savage_playground_backend/host_management_interface/: build.rs
savage_playground_backend/host_management_interface/proto/: lobby_update.proto
savage_playground_backend/host_management_interface/src/: lib.rs
savage_playground_backend/host_runtime_interface/: Cargo.toml  build.rs
savage_playground_backend/host_runtime_interface/src/: lib.rs
savage_playground_backend/pong/src/: main.rs
savage_playground_backend/proto/: Cargo.toml  build.rs
savage_playground_backend/proto/src/: lib.rs
savage_playground_backend/room_server_interface/: Cargo.toml  build.rs
savage_playground_backend/room_server_interface/src/: lib.rs
savage_playground_backend/testing/: Cargo.toml
savage_playground_backend/testing/src/: main.rs
testing/: Cargo.toml
testing/src/: main.rs
(+659 files in other folders)
