[workspace]

members = [
    "debug/echo",
    "debug/pong",
    "debug/proto_echo",

    "build_util/build_io",
    "build_util/proto_gen",
    "build_util/schema_gen",

    "framework",
    "testing",
    "worlds",

    "servers/game_host_server",
    "servers/game_asset_server",

    "servers/test_game_host_server",
    
    "communication/game_interface",
    "communication/room_server_interface",
]

[workspace.dependencies]
tokio = { version = "1.32.0", features = ["process", "rt-multi-thread", "tracing", "macros", "test-util", "signal", "sync"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
prost = { version = "*" }
prost-types = { version = "*" }
async-trait = { version = "*" }
tracing = { version = "*" }
tracing-subscriber = { version = "*" }

# Build dependencies
prost-build = { version = "*" }
