[workspace]

members = [
    "debug",
    "framework",
    "testing",
    "worlds",
    "game_host_server",
    "pong",
]

[workspace.dependencies]
bevy = { version = "*", features = ["dynamic_linking"] }
tokio = { version = "1.32.0", features = ["process", "rt-multi-thread", "tracing", "macros", "test-util", "signal", "sync"] }
serde = { version = "*" }
serde_json = { version = "*" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3