[workspace]

members = [
    "debug/echo",
    "debug/pong",
    "build_utils",
    "framework",
    "testing",
    "proto",
    "worlds",
    "game_host_server",
]

[workspace.dependencies]
bevy = { version = "*", features = ["dynamic_linking"] }
tokio = { version = "1.32.0", features = ["process", "rt-multi-thread", "tracing", "macros", "test-util", "signal", "sync"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3


