[package]
name = "game_asset_server"
version = "0.1.0"
edition = "2021"
description = "Game Room asset server."

[dependencies]
rocket.workspace = true
rocket_cors.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
schema_gen.workspace = true