[package]
name = "game_host_server"
version = "0.1.0"
edition = "2021"
description = "Game Room hosting server."

[dependencies]
rocket_ws = "*"
futures-util = "*"
arc-swap = "*"

rocket.workspace = true
rocket_cors.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tracing.workspace = true

game_interface.workspace = true

[build-dependencies]
schema_gen.workspace = true