[workspace]
members = [
    "ffxiv_toolkit",
    "game_config",
    "game_interface",
    "game_plugins",
    "game_renderer",
    "utility/build_io",
    "utility/proto_gen",
    "utility/schema_gen"
]
resolver="2"

[workspace.dependencies]
prost = "*"
prost-types = "*"
tracing = "*"
bevy = { version = "*", default-features = false, features = ["dynamic_linking", "multi_threaded", "bevy_scene", "bevy_sprite", "bevy_state",  "bevy_animation", "bevy_color", "bevy_core_pipeline" ]}
proto_gen = { path = "utility/proto_gen" }
game_interface = { path = "./game_interface" }
game_renderer = { path = "./game_renderer" }
game_plugins = { path = "./game_plugins" }
