[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = "1.0.106"
uuid = {version = "*", features = ["v1", "v6", "serde", "fast-rng"]}
tracing = { version = "0.1", features = ["log"] }
rand = "*"
rand_chacha = "0.3.1"
bevy = { workspace = true }

[dependencies.bevy_rapier2d]
version = "*"
features = ["debug-render-2d", "simd-stable"]

[features]
debug_collider_renderer = []
debug_local_input = []
debug_diagnostics = []
