[package]
name = "room_server_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }

[build-dependencies]
proto_gen = { path = "../build_util/proto_gen" }
schema_gen = { path = "../build_util/schema_gen" }
