[package]
name = "game_host_server"
version = "0.1.0"
description = "Starts a Host Server for games."
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
futures-util = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

warp = "*"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
async-trait = { workspace = true }

room_server_interface = { path = "../../communication/room_server_interface" }

[build-dependencies]
build_io = { path = "../../build_util/build_io" }

[dev-dependencies]
# I need some simple Websocket client to test the host.
tokio-tungstenite = "*"
http = "*"