[package]
name = "proto_chat"
description = "Reads UI snapshot as proto. Struct, gets a [message] from it and propagates as broadcast with UI snapshot [message] type."
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "*"
prost-types = "*"
tracing = "*"
game_interface = { path = "../../../savage_framework/backend/game_interface" }
game_config = { path = "../../../savage_framework/backend/game_config", features = ["log_to_file"] }

[build-dependencies]
proto_gen = { path = "../../../savage_framework/backend/utility/proto_gen" }
