[package]
name = "game_plugins"
version = "0.1.0"
description = "Provides a set of plugins with features commonly used in games."
edition = "2021"

[dependencies]
bevy = { workspace=true, optional = true }
tokio = { version = "*", optional = true, features = ["io-util", "rt", "time", "sync", "io-std"]}
prost.workspace = true
tracing.workspace = true
game_renderer = { workspace=true, optional=true }
game_interface = { workspace=true }

[features]
time_sliced_io = [ "dep:bevy", "dep:tokio" ]
self_destruct = [ "dep:bevy" ]
game_renderer = [ "dep:bevy", "dep:game_renderer"]